index html updated

--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Lab Reservation System</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Lab Reservation System</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <div class="index-body">
     <header>
       <h1>Lab Reservation System</h1>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
-        <a href="labs.html">View Labs</a>
-        <a href="profile.html">Profile</a>
+        <a class="links" href="index.html">Home</a> 
+        <a class="links" href="login.html">Login</a>
+        <a class="links" href="register.html">Register</a>
+        <a class="links" href="labs.html">View Labs</a>
+        <a class="links" href="profile.html">Profile</a>
       </nav>
     </header>
+   
+      <h2> WELCOME TO RESEVATION SYSTEM 1.0</h2>
+  
+  </div>
 
-    <main>
-      <h2>Welcome!</h2>
-      <p>This is a reservation system for DLSU's computer laboratories.</p>
-    </main>
-  </body>
+
+</body>
+
 </html>
