--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body class = "login-register">
     <div class="form-container">
       <h2>Login</h2>
       <form action="#" method="post">
