--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <title>Register</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body class = "login-register">
     <div class="form-container">
       <h2>Register</h2>
       <form action="#" method="post">
