--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
-  <div class="index-body">
-    <header>
-      <h1>Lab Reservation System</h1>
-      <nav>
-        <a class="links" href="index.html">Home</a> 
-        <a class="links" href="login.html">Login</a>
-        <a class="links" href="register.html">Register</a>
-        <a class="links" href="labs.html">View Labs</a>
-        <a class="links" href="profile.html">Profile</a>
-      </nav>
-    </header>
-   
-      <h2> WELCOME TO RESEVATION SYSTEM 1.0</h2>
-  
+<body class="main-menu">
+
+  <div class="top-part">
+    <h2 id="top">Lab Reservation System</h2>
   </div>
+  <div class="header-bar">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="login.html">Login</a>
+      <a href="register.html">Register</a>
+      <a href="labs.html">View Labs</a>
+      <a href="profile.html">Profile</a>
+    </nav>
+    <h2>Reservation Table</h2>
+  </div>
+
+  <div class="main-table"></div>
 
 
 </body>
