--- a/index.html
+++ b/index.html
@@ -6,28 +6,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Lab Reservation System</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 
-<body class="main-menu">
-
-  <div class="top-part">
-    <h2 id="top">Lab Reservation System</h2>
+<body>
+  <div class="title-color">
+    <h2 id="title">Lab Reservation System</h2>
   </div>
-  <div class="header-bar">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="login.html">Login</a>
-      <a href="register.html">Register</a>
-      <a href="labs.html">View Labs</a>
-      <a href="profile.html">Profile</a>
-    </nav>
-    <h2>Reservation Table</h2>
+  <div class="links">
+    <div class="left-tab">
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
+        <a href="labs.html">View Labs</a>
+        <a href="profile.html">Profile</a>
+      </nav>
+    </div>
+
+    <div class="table">
+      <h2>Reservation Table</h2>
+      <div class="box">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        <img src="data\room.png" alt="room">
+        
+      </div>
+    </div>
   </div>
-
-  <div class="main-table"></div>
-
-
 </body>
 
 </html>
