Addes Sprites + almost finalized menu page

--- a/index copy.html
+++ b/index copy.html
@@ -33,42 +33,44 @@
     </div>
 
     <div class="table">
-      <h2>Reservation Table</h2>
+      <h2>Seat reservation</h2>
+      Date: <input type="date">
+      Lab <input type="radio">
       <div class="box">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
-        <img src="data\room.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
+        <img src="data\computer-sprite.png" alt="room">
         
       </div>
     </div>
