Changes to Index/Home
Made the Navigation bar highlight the current page.

Made the header smaller

Change some font-color to white to better contrast the darker backgrounds

Added numbering to computer image

Change the the computer images from img html file to a fixed size div that changes background-image instead.

Added numbering to the computer screens. Note this is a very primitive implementation that uses fixed px size to move around the text box. Should move it to a more dynamic system instead.

--- a/index copy.html
+++ b/index copy.html
@@ -12,22 +12,42 @@
 <body>
   <div class="title-color">
     <img src="data/Logo.png">
-    <h2 id="title">LS Lab Resevation</h2>
+    <h2 id="title">LS Lab Reservation</h2>
   </div>
   <div class="links">
     <div class="left-tab">
       <nav>
-        <a href="index.html">Home</a>
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
-        <a href="labs.html">View Labs</a>
-        <a href="profile.html">Profile</a>
+        <div id="currentlyhere">
+          <a href="index.html">Home</a>
+        </div>
+        <div>
+          <a href="login.html">Login</a>
+        </div>
+        <div>
+          <a href="register.html">Register</a>
+        </div>
+        <div>
+          <a href="labs.html">View Labs</a>
+        </div>
+        <div>
+          <a href="profile.html">Profile</a>
+        </div>
 
-        <a>Reserve a slot</a>
-        <a>Edit Reservations</a>
-        <a>View Reservations</a>
-        <a>View Profile</a>
-        <a>Search Profiles</a>
+        <div>
+          <a>Reserve a slot</a>
+        </div>
+        <div>
+          <a>Edit Reservations</a>
+        </div>
+        <div>
+          <a>View Reservations</a>
+        </div>
+        <div>
+          <a>View Profile</a>
+        </div>
+        <div>
+          <a>Search Profiles</a>
+        </div>
 
       </nav>
     </div>
@@ -37,40 +57,157 @@
       Date: <input type="date">
       Lab <input type="radio">
       <div class="box">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
-        <img src="data\computer-sprite.png" alt="room">
+        <div>
+          <div>1</div>
+        </div>
+        <div id="reserved">
+          <div>2</div>
+        </div>
+        <div>
+          <div>3</div>
+        </div>
+        <div>
+          <div>4</div>
+        </div>
+        <div>
+          <div>5</div>
+        </div>
+        <div>
+          <div>6</div>
+        </div>
+        <div id="reserved">
+          <div>7</div>
+        </div>
+        <div id="in-use">
+          <div>8</div>
+        </div>
+        <div>
+          <div>9</div>
+        </div>
+        <div>
+          <div>10</div>
+        </div>
+        <div>
+          <div>11</div>
+        </div>
+        <div id="in-use">
+          <div>12</div>
+        </div>
+        <div>
+          <div>13</div>
+        </div>
+        <div>
+          <div>14</div>
+        </div>
+        <div id="reserved">
+          <div>15</div>
+        </div>
+        <div>
+          <div>16</div>
+        </div>
+        <div>
+          <div>17</div>
+        </div>
+        <div>
+          <div>18</div>
+        </div>
+        <div id="reserved">
+          <div>19</div>
+        </div>
+        <div>
+          <div>20</div>
+        </div>
+        <div>
+          <div>21</div>
+        </div>
+        <div>
+          <div>22</div>
+        </div>
+        <div id="reserved">
+          <div>23</div>
+        </div>
+        <div>
+          <div>24</div>
+        </div>
+        <div>
+          <div>25</div>
+        </div>
+        <div>
+          <div>26</div>
+        </div>
+        <div id="reserved">
+          <div>27</div>
+        </div>
+        <div>
+          <div>28</div>
+        </div>
+        <div id="reserved">
+          <div>29</div>
+        </div>
+        <div>
+          <div>30</div>
+        </div>
+        <div>
+          <div>31</div>
+        </div>
+        <div id="in-use">
+          <div>32</div>
+        </div>
+        <div id="reserved">
+          <div>33</div>
+        </div>
+        <div>
+          <div>34</div>
+        </div>
+        <div>
+          <div>35</div>
+        </div>
+        <div>
+          <div>36</div>
+        </div>
+        <div id="in-use">
+          <div>37</div>
+        </div>
+        <div>
+          <div>38</div>
+        </div>
+        <div id="reserved">
+          <div>39</div>
+        </div>
+        <div>
+          <div>40</div>
+        </div>
+        <div>
+          <div>41</div>
+        </div>
+        <div>
+          <div>42</div>
+        </div>
+        <div id="in-use">
+          <div>43</div>
+        </div>
+        <div>
+          <div>44</div>
+        </div>
+        <div>
+          <div>45</div>
+        </div>
+        <div>
+          <div>46</div>
+        </div>
+        <div>
+          <div>47</div>
+        </div>
+        <div>
+          <div>48</div>
+        </div>
+        <div>
+          <div>49</div>
+        </div>
+        <div>
+          <div>50</div>
+        </div>
+
         
       </div>
     </div>
