made 5 labs and 35 computers each clickable computer as well

--- a/index copy.html
+++ b/index copy.html
@@ -7,6 +7,9 @@
 
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/index copy.css" />
+  <script src="js/script.js" defer></script>
+
+
 </head>
 
 <body>
@@ -26,15 +29,9 @@
         <div>
           <a href="register.html">Register</a>
         </div>
-        <div>
-          <a href="labs.html">View Labs</a>
-        </div>
-        <div>
-          <a href="profile.html">Profile</a>
-        </div>
 
         <div>
-          <a>Reserve a slot</a>
+          <a href="profile.html">Profile</a>
         </div>
         <div>
           <a>Edit Reservations</a>
@@ -55,12 +52,16 @@
     <div class="table">
       <h2>Seat reservation</h2>
       Date: <input type="date">
-      Lab <input type="radio">
+      <label><input type="radio" name="lab" value="1" checked> Lab 1</label>
+      <label><input type="radio" name="lab" value="2"> Lab 2</label>
+      <label><input type="radio" name="lab" value="3"> Lab 3</label>
+      <label><input type="radio" name="lab" value="4"> Lab 4</label>
+      <label><input type="radio" name="lab" value="5"> Lab 5</label>
       <div class="box">
         <div>
           <div>1</div>
         </div>
-        <div id="reserved">
+        <div>
           <div>2</div>
         </div>
         <div>
@@ -75,10 +76,10 @@
         <div>
           <div>6</div>
         </div>
-        <div id="reserved">
+        <div>
           <div>7</div>
         </div>
-        <div id="in-use">
+        <div>
           <div>8</div>
         </div>
         <div>
@@ -90,7 +91,7 @@
         <div>
           <div>11</div>
         </div>
-        <div id="in-use">
+        <div>
           <div>12</div>
         </div>
         <div>
@@ -99,7 +100,7 @@
         <div>
           <div>14</div>
         </div>
-        <div id="reserved">
+        <div>
           <div>15</div>
         </div>
         <div>
@@ -111,7 +112,7 @@
         <div>
           <div>18</div>
         </div>
-        <div id="reserved">
+        <div>
           <div>19</div>
         </div>
         <div>
@@ -123,7 +124,7 @@
         <div>
           <div>22</div>
         </div>
-        <div id="reserved">
+        <div>
           <div>23</div>
         </div>
         <div>
@@ -135,13 +136,13 @@
         <div>
           <div>26</div>
         </div>
-        <div id="reserved">
+        <div>
           <div>27</div>
         </div>
         <div>
           <div>28</div>
         </div>
-        <div id="reserved">
+        <div>
           <div>29</div>
         </div>
         <div>
@@ -153,7 +154,7 @@
         <div id="in-use">
           <div>32</div>
         </div>
-        <div id="reserved">
+        <div >
           <div>33</div>
         </div>
         <div>
@@ -162,55 +163,13 @@
         <div>
           <div>35</div>
         </div>
-        <div>
-          <div>36</div>
-        </div>
-        <div id="in-use">
-          <div>37</div>
-        </div>
-        <div>
-          <div>38</div>
-        </div>
-        <div id="reserved">
-          <div>39</div>
-        </div>
-        <div>
-          <div>40</div>
-        </div>
-        <div>
-          <div>41</div>
-        </div>
-        <div>
-          <div>42</div>
-        </div>
-        <div id="in-use">
-          <div>43</div>
-        </div>
-        <div>
-          <div>44</div>
-        </div>
-        <div>
-          <div>45</div>
-        </div>
-        <div>
-          <div>46</div>
-        </div>
-        <div>
-          <div>47</div>
-        </div>
-        <div>
-          <div>48</div>
-        </div>
-        <div>
-          <div>49</div>
-        </div>
-        <div>
-          <div>50</div>
-        </div>
 
-        
+
+
+
       </div>
     </div>
+    
   </div>
 </body>
 
