Adding a (currently useless) clear and reserve button
Clear and reverse button

Used old reserve-button css i found inside index copy

--- a/index copy.html
+++ b/index copy.html
@@ -168,6 +168,11 @@
 
 
       </div>
+
+      <div class="box-buttons">
+         <button id="Clear" type="button">Clear</button> 
+         <button id="reserve-button" type="button">Reserve</button> 
+      </div>
     </div>
     
   </div>
