Split some css into a separate Universal file
Main Style file will now hold css that will be used across multiple pages

Each individual page will now reference two or more css

--- a/index copy.html
+++ b/index copy.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Lab Reservation System</title>
+  <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
   <script src="js/script.js" defer></script>
 
