--- a/register.html
+++ b/register.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Register</title>
+    <link rel="stylesheet" href="css/main_style.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class = "login-register">
+  <body>
+  <div class="title-color">
+    <img src="data/Logo.png">
+    <h2 id="title">LS Lab Reservation</h2>
+  </div>
+  <div class = "login-register">
     <div class="form-container">
       <h2>Register</h2>
       <form action="#" method="post">
@@ -26,5 +32,6 @@
       </form>
       <p>Already have an account? <a href="login.html">Login here</a></p>
     </div>
+  </div>
   </body>
 </html>
