Adding name tag under reserved
Currently defaults to anon

--- a/index copy.html
+++ b/index copy.html
@@ -59,111 +59,146 @@
       <label><input type="radio" name="lab" value="4"> Lab 4</label>
       <label><input type="radio" name="lab" value="5"> Lab 5</label>
       <div class="box">
-        <div>
-          <div>1</div>
-        </div>
-        <div>
-          <div>2</div>
-        </div>
-        <div>
-          <div>3</div>
-        </div>
-        <div>
-          <div>4</div>
-        </div>
-        <div>
-          <div>5</div>
-        </div>
-        <div>
-          <div>6</div>
-        </div>
-        <div>
-          <div>7</div>
-        </div>
-        <div>
-          <div>8</div>
-        </div>
-        <div>
-          <div>9</div>
-        </div>
-        <div>
-          <div>10</div>
-        </div>
-        <div>
-          <div>11</div>
-        </div>
-        <div>
-          <div>12</div>
-        </div>
-        <div>
-          <div>13</div>
-        </div>
-        <div>
-          <div>14</div>
-        </div>
-        <div>
-          <div>15</div>
-        </div>
-        <div>
-          <div>16</div>
-        </div>
-        <div>
-          <div>17</div>
-        </div>
-        <div>
-          <div>18</div>
-        </div>
-        <div>
-          <div>19</div>
-        </div>
-        <div>
-          <div>20</div>
-        </div>
-        <div>
-          <div>21</div>
-        </div>
-        <div>
-          <div>22</div>
-        </div>
-        <div>
-          <div>23</div>
-        </div>
-        <div>
-          <div>24</div>
-        </div>
-        <div>
-          <div>25</div>
-        </div>
-        <div>
-          <div>26</div>
-        </div>
-        <div>
-          <div>27</div>
-        </div>
-        <div>
-          <div>28</div>
-        </div>
-        <div>
-          <div>29</div>
-        </div>
-        <div>
-          <div>30</div>
-        </div>
-        <div>
-          <div>31</div>
-        </div>
-        <div id="in-use">
-          <div>32</div>
-        </div>
-        <div >
-          <div>33</div>
-        </div>
-        <div>
-          <div>34</div>
-        </div>
-        <div>
-          <div>35</div>
-        </div>
+          <div>
+            <div class="number">1</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">2</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">3</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">4</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">5</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">6</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">7</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">8</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">9</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">10</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">11</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">12</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">13</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">14</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">15</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">16</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">17</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">18</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">19</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">20</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">21</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">22</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">23</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">24</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">25</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">26</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">27</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">28</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">29</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">30</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">31</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">32</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">33</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">34</div>
+            <div class="name"></div>
+          </div>
+          <div>
+            <div class="number">35</div>
+            <div class="name"></div>
+          </div>
 
 
 
