--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
   <div class="links">
     <div class="left-tab">
       <nav>
-        <div>
+        <div id="currentlyhere">
           <a href="home.html">Home</a>
         </div>
         <div>
@@ -37,7 +37,7 @@
         <div>
           <a href="edit_reservation.html">Edit Reservations</a>
         </div>
-        <div id="currentlyhere">
+        <div>
           <a href="profile.html">View Profile</a>
         </div>
         <div>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="table">
-      <h2>Profile here</h2>
+      <h1>Welcome to the LabRes System!</h2>
     </div>
 
     
