--- a/view_reservation.html
+++ b/view_reservation.html
@@ -31,17 +31,17 @@
         <div>
           <a href="create_reservation.html">Create Reservation</a>
         </div>
-        <div>
+        <div id="currentlyhere">
           <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
           <a href="edit_reservation.html">Edit Reservations</a>
         </div>
-        <div id="currentlyhere">
+        <div>
           <a href="profile.html">View Profile</a>
         </div>
         <div>
-          <a href="search_profile.html">Search Profiles</a>
+          <a>Search Profiles</a>
         </div>
         <div>
           <a href="login.html">Login</a>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="table">
-      <h2>Profile here</h2>
+      <h2>Welcome to the LabRes System!</h2>
     </div>
 
     
