--- a/edit_reservation.html
+++ b/edit_reservation.html
@@ -34,10 +34,10 @@
         <div>
           <a href="view_reservation.html">View Reservations</a>
         </div>
-        <div>
+        <div id="currentlyhere">
           <a href="edit_reservation.html">Edit Reservations</a>
         </div>
-        <div id="currentlyhere">
+        <div>
           <a href="profile.html">View Profile</a>
         </div>
         <div>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="table">
-      <h2>Profile here</h2>
+      <h2>Edit Reservations here</h2>
     </div>
 
     
