--- a/search_profile.html
+++ b/search_profile.html
@@ -37,10 +37,10 @@
         <div>
           <a href="edit_reservation.html">Edit Reservations</a>
         </div>
-        <div id="currentlyhere">
+        <div>
           <a href="profile.html">View Profile</a>
         </div>
-        <div>
+        <div id="currentlyhere">
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="table">
-      <h2>Profile here</h2>
+      <h2>Edit Reservations here</h2>
     </div>
 
     
