Changed home.html to index html

--- a/create_reservation.html
+++ b/create_reservation.html
@@ -21,7 +21,7 @@
     <div class="left-tab">
       <nav>
         <div>
-          <a href="home.html">Home</a>
+          <a href="index.html">Home</a>
         </div>
         <div id="currentlyhere">
           <a href="create_reservation.html">Create Reservation</a>
