--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
     <div class="left-tab">
       <nav>
         <div>
-          <a href="home.html">Home</a>
+          <a href="index.html">Home</a>
         </div>
         <div>
           <a href="create_reservation.html">Create Reservation</a>
