Working on View

--- a/view_reservation.html
+++ b/view_reservation.html
@@ -8,7 +8,6 @@
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
-  <script src="js/script.js" defer></script>
 
 </head>
 
@@ -48,6 +47,35 @@
 
     <div class="table">
       <h2>Welcome to the LabRes System!</h2>
+      <div class="box" id="view_box">
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+              <div class="pfp">
+                <img>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+
+              </div>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+              <div class="pfp">
+                <img>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div>
+
+              </div>
+            </div>
+          </div>
+
+      </div>
     </div>
 
     
