--- a/create_reservation.html
+++ b/create_reservation.html
@@ -95,143 +95,143 @@
 
       <label><input type="checkbox" name="anon" value="1">      Are you reserving anonymously? </label>
       <div class="box">
-          <div>
+          <div class="computer">
             <div class="number">1</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">2</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">3</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">4</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">5</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">6</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">7</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">8</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">9</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">10</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">11</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">12</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">13</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">14</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">15</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">16</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">17</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">18</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">19</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">20</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">21</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">22</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">23</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">24</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">25</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">26</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">27</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">28</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">29</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">30</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">31</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">32</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">33</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">34</div>
             <div class="name"></div>
           </div>
-          <div>
+          <div class="computer">
             <div class="number">35</div>
             <div class="name"></div>
           </div>
