added custom message to user

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="table">
-      <h1>Welcome to the LabRes System!</h1>
+       <h1 id="welcome-message">Welcome to the LabRes System!</h1>
     </div>
 
     
